# cpp-cmake-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.h.in
cmake/: check_arch.cmake  use_boost.cmake  use_gstreamer.cmake
scripts/macos/: build.sh
scripts/osx/: build.sh  generate.sh
scripts/win/: build.bat  generate.bat
scripts/windows/: build.bat  generate.bat
src/: gstreamer-tutorial-1.c  gstreamer-tutorial-1.h  gstreamer-tutorial-2.c  gstreamer-tutorial-2.h  gstreamer-tutorial-3.c  gstreamer-tutorial-3.h  main.cpp  version.h.in
src/gamelib/: CMakeLists.txt  map.cpp  map.h  world.cpp  world.h
src/logging/: logging.cpp  logging.h
tests/: CMakeLists.txt  tests.cpp
